Changing the background color

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html, body {
     margin: 0;
     height: 100%;
     width: 100%;
-    background-color: yellow;
+    background: linear-gradient(120deg, green, yellow, red);
 }
 
 body{
